gedcomfy/tests/snapshots/tests__golden_files@basic_nested.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ASCII\r\n0 _ROOT\r\n1 _CHILD c\r\n"
expression: kdl
input_file: gedcomfy/tests/syntax_inputs/basic_nested.ged
---
HEAD {
    GEDC {
        VERS "5.5.1"
    }
    CHAR "ASCII"
}
_ROOT {
    _CHILD "c"
}
