gedcomfy/tests/snapshots/tests__golden_files@basic_nested_2_siblings.ged.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ASCII\r\n0 _ROOT\r\n1 _CHILD1\r\n2 _GRANDCHILD\r\n1 _CHILD2\r\n"
expression: kdl
input_file: gedcom/tests/syntax_inputs/basic_nested_2_siblings.ged
---
HEAD {
    GEDC {
        VERS "5.5.1"
    }
    CHAR "ASCII"
}
_ROOT {
    _CHILD1 {
        _GRANDCHILD
    }
    _CHILD2
}
