gedcomfy/tests/snapshots/tests__golden_files@incorrect_level.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "1 HEAD\r\n1 TAG\r\n"
expression: "format!(\"{:?}\", parser.attach_source(err))"
input_file: gedcomfy/tests/syntax_inputs/incorrect_level.ged
---
gedcom::encoding::not_gedcom

  × Unable to determine encoding of GEDCOM file
  ╰─▶ Input does not appear to be a GEDCOM file
  help: GEDCOM files must start with a '0 HEAD' record, but this was not found
