gedcomfy/tests/snapshots/tests__golden_files@no_head.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 TRLR\r\n1 THING\r\n"
expression: "shared::render(&err)"
input_file: gedcomfy/tests/format_inputs/no_head.ged
---
gedcomfy::error

  × A problem was found in the GEDCOM file
  ├─▶   × A problem was found while trying to determine the encoding of the
  │     │ GEDCOM file
  │   
  ╰─▶   × Input file appears to be the trailing part of a multi-volume GEDCOM
        │ file
         ╭─[1:1]
       1 │ 0 TRLR
         · ───┬──
         ·    ╰── this record is valid but not the start of a GEDCOM file
       2 │ 1 THING
         ╰────
        help: GEDCOM files must start with a '0 HEAD' record, but this was
              not found
