gedcomfy/tests/snapshots/tests__golden_files@no_trlr.ged.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n"
expression: "format!(\"{:?}\",\n    Report::new(err).with_source_code(NamedSource::new(filename, data)))"
input_file: gedcom/tests/format_inputs/no_trlr.ged
---
  × Unable to determine version of GEDCOM file
  ╰─▶ GEDCOM file appeared to be syntactically valid, but no version could be found
