gedcomfy/tests/snapshots/tests__golden_files@no_vers.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 FOO BAR\r\n0 TRLR\r\n"
expression: "shared::render(&err)"
input_file: gedcomfy/tests/format_inputs/no_vers.ged
---
gedcomfy::error

  × A problem was found in the GEDCOM file
  ╰─▶ gedcom::version::missing
      
        × GEDCOM file appeared to be syntactically valid, but no version could
        │ be found
         ╭─[1:1]
       1 │ ╭─▶ 0 HEAD
       2 │ │   1 GEDC
       3 │ ├─▶ 2 FOO BAR
         · ╰──── this is the head record, which should contain the GEDCOM
      version
       4 │     0 TRLR
         ╰────
        help: GEDCOM version can be explicitly set using the `--force-version`
              flag
