gedcomfy/tests/snapshots/tests__golden_files@void_xref.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ASCII\r\n0 OK\r\n1 @VOID@ BAD\r\n"
expression: "format!(\"{:?}\",\n    Report::new(err).with_source_code(NamedSource::new(filename.to_string_lossy(),\n    data)))"
input_file: gedcomfy/tests/syntax_inputs/void_xref.ged
---
gedcom::parse_error::reserved_xref

  × GEDCOM file contains a syntax error
  ╰─▶ Reserved value 'VOID' cannot be used as an XRef
   ╭─[void_xref.ged:6:4]
 5 │ 0 OK
 6 │ 1 @VOID@ BAD
   ·    ──┬─
   ·      ╰── VOID is a reserved value
   ╰────
